--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
         <p id="exp1">キーボードで入力してください。</p>
     </div>
 
+    <div id="sample" class="moji1">
+        <p id="sample1">（例）3AO-Rの中間剥ぎ取り時のテンションメンバの長さを知りたい。</p>
+    </div>
+
     <div class="cp_iptxt">
         <p id="textInput">
             <input type="text" id="text" placeholder="" class="ef">
@@ -40,7 +44,8 @@
     <p><button id="toggleButton" type="button" class="button">入力方法切替え</button></p>
     <p><button id="startButton" type="button" style="display: none;" class="button">開始</button> <button id="stopButton" type="button" style="display: none;" class="button">停止</button></p>
     <p><button id="submitButton" type="button"class="button">送信</button></p>
-    <div id="check" class="moji1"></div>
+    <div id="check1" class="moji1"></div>
+    <div id="check2" class="moji1"></div>
     <div id="iframes"></div>    
     <textarea id="response" cols=180 rows=50 disabled></textarea>
 </body>
